--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,28 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    container:
+      image:  rust:nightly
+
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
+        ports:
+        - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
     - uses: actions/checkout@v2
     - name: Run tests
-      run: cargo test --verbose && cargo clippy
+      env:
+        DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
+    - run: PGPASSWORD=postgres && psql -U postgres -d postgres -f tests/db.sql
+    - run: cargo test --verbose && cargo clippy
 
   deploy:
 
