--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,23 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
+        ports:
+        - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
     - uses: actions/checkout@v2
     - name: Run tests
-      run: cargo test --verbose && cargo clippy
+      run: |
+        export DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres && \
+        export PGPASSWORD=postgres && \
+        psql -U postgres -d postgres -f tests/db.sql && \
+        cargo test --verbose && cargo clippy
