--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,12 @@ env:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
+
+    # runs all of the steps inside the specified container rather than on the VM host.  
+    # Because of this the network configuration changes from host based network to a container network.
+    container:
+      image:  rust:latest
 
     services:
       postgres:
