--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
     # runs all of the steps inside the specified container rather than on the VM host.  
     # Because of this the network configuration changes from host based network to a container network.
     container:
-      image:  rust:latest
+      image:  ubuntu-latest
 
     services:
       postgres:
