--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,6 @@ env:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
 
     services:
@@ -24,7 +23,6 @@ jobs:
           POSTGRES_DB: postgres
         ports:
         - 5432:5432
-        # needed because the postgres container does not provide a healthcheck
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
@@ -33,7 +31,7 @@ jobs:
       run: |
         export DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres && \
         export PGPASSWORD=postgres && \
-        psql -U postgres -d postgres -f tests/db.sql && \
+        psql -h localhost -p 5432 -U postgres -d postgres -f tests/db.sql && \
         cargo test --verbose && cargo clippy
 
   deploy:
