--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "length_aware_paginator"
-version = "0.3.0"
+version = "1.0.0"
 authors = ["Tibor Hudik <tibor@barrage.net>"]
 edition = "2018"
 license = "MIT"
@@ -13,5 +13,5 @@ repository = "https://github.com/barrage/lenght_aware_paginator"
 
 [dependencies]
 dotenv = "0.15.0"
-diesel = { version = "1.4.5", features = ["postgres"] }
+diesel = { version = "2.0.0-rc.0", features = ["postgres"] }
 serde = { version = "1", features = ["derive"] }
